--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -1,19 +1,19 @@
 #background{
     background-size: contain;
-    padding: 2rem;
-    height:100vh;
+    height: 45vh;
+    background-color: #B3E8F6;
 }
 #trailer{
     display: flex;
     flex-direction: column;
     width: 100%;
     height: auto;
+    box-sizing: border-box;
 
 }
 #trailer-img{
     object-fit: cover;
     width: 100%
-    
 }
 #add-steam{
     cursor: pointer;
@@ -44,8 +44,10 @@
     align-items: center;
     flex-direction: row;
 }
-.yt-video{
+#yt-video{
     width: 100%;
-    height: 27vh;
-
+    padding-bottom: 1.7rem;
+    z-index: 3;
+    -webkit-box-shadow: 0px -30px 20px 3px #000000; 
+    box-shadow: 0px -30px 20px 3px #000000;
 }
