--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,18 +1,10 @@
 .footer{
-    display: flex;
-    flex-direction: row;
     background-color: #B3E8F6;
-    height: 15vh;
+    height: auto;
     width: 100%;
-    box-sizing: border-box;
+    padding-top:13%
 }
-#social-box{
-    display: flex;
-    align-items: flex-end;
-}
-
-
 .social{
     object-fit: contain;
-    width: 16.6%;
+    width: 16.667%;
 }
