--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,8 +1,8 @@
 .footer{
+    display: flex;
     background-color: #B3E8F6;
-    height: auto;
+    height: 10vh;
     width: 100%;
-    padding-top:13%
 }
 .social{
     object-fit: contain;
