--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,9 @@
 .App{
-    height:100vh;
+    height:91vh;
     box-sizing: border-box;
     background-color: #B3E8F6;
     display: flex;
     flex-direction: column;
+    border:1px solid red;
 }
+
