--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,10 @@
 .App{
-    height:91vh;
+    height:100vh;
     box-sizing: border-box;
     background-color: #B3E8F6;
     display: flex;
     flex-direction: column;
-    border:1px solid red;
+    padding:0;
+    margin:0;
 }
 
