--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -7,5 +7,6 @@
 .social{
     width : 16.67%;
     background-size: cover;
-    height:10vh;
+    background-position: bottom;
+    height: 10vh;
 }
