--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -1,3 +1,4 @@
+
 #trailer{
     display: flex;
     flex-direction: column;
@@ -22,6 +23,7 @@
     color:#1876BA;
     font-weight: bold;
     width: 60%;
+    margin-top:1.5rem;
 
 }
 #steam-logo{
@@ -43,6 +45,6 @@
     width: 100%;
     padding-bottom: 1.7rem;
     z-index: 3;
-    -webkit-box-shadow: 0px -30px 20px 3px #000000; 
-    box-shadow: 0px -30px 20px 3px #000000;
+    -webkit-box-shadow: 0px -15px 15px -2px #000000; 
+box-shadow: 0px -15px 15px -2px #000000;
 }
